[gd_scene load_steps=14 format=3 uid="uid://b78uwcqxvnvl0"]

[ext_resource type="Script" path="res://menu/lose.gd" id="1_58xej"]
[ext_resource type="Texture2D" uid="uid://ceqyck4rufbob" path="res://menu/2.jpg" id="1_jnwda"]
[ext_resource type="FontFile" uid="uid://btstv31s0b6pi" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/kirifont/KiriFont.otf" id="2_4wpvp"]
[ext_resource type="FontFile" uid="uid://yachbqqbhjg2" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/connection_ii/ConnectionII.otf" id="2_d1g4i"]
[ext_resource type="StyleBox" uid="uid://c5dbodpbg6gp4" path="res://menu/buttom pressed style.tres" id="3_uuj0w"]
[ext_resource type="Script" path="res://menu.gd" id="4_4ex28"]
[ext_resource type="StyleBox" uid="uid://gbmtf4h7xkcx" path="res://menu/buttom style.tres" id="5_0g15q"]
[ext_resource type="AudioStream" uid="uid://csohyyucqa2s1" path="res://sound/bo dead.mp3" id="8_iv24j"]
[ext_resource type="AudioStream" uid="uid://c28cpj6f8px7y" path="res://sound/click hoveer.mp3" id="8_jkc1d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80fse"]
bg_color = Color(0.435294, 0.678431, 0.235294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 30
border_color = Color(0.317647, 0.47451, 0.121569, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqs3a"]
bg_color = Color(0.435294, 0.678431, 0.235294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 15
border_color = Color(0.317647, 0.47451, 0.121569, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6thr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqgtg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="lose_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -276.0
offset_right = -7.0
offset_bottom = -276.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58xej")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 276.0
offset_right = 1930.0
offset_bottom = 1356.0
texture = ExtResource("1_jnwda")

[node name="your score is" type="Label" parent="."]
layout_mode = 2
offset_left = 538.0
offset_top = 918.0
offset_right = 1733.0
offset_bottom = 1018.0
theme_override_fonts/font = ExtResource("2_d1g4i")
theme_override_font_sizes/font_size = 95
text = "your score is     :"

[node name="score" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1235.0
offset_top = 920.0
offset_right = 2430.0
offset_bottom = 1020.0
theme_override_fonts/font = ExtResource("2_d1g4i")
theme_override_font_sizes/font_size = 95
text = "$"

[node name="High Score is" type="Label" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 1028.0
offset_right = 1733.0
offset_bottom = 1128.0
theme_override_fonts/font = ExtResource("2_d1g4i")
theme_override_font_sizes/font_size = 95
text = "High Score is     :"

[node name="score2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1201.0
offset_top = 1031.0
offset_right = 2396.0
offset_bottom = 1131.0
theme_override_fonts/font = ExtResource("2_d1g4i")
theme_override_font_sizes/font_size = 95
text = "$"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 286.0
offset_right = 1540.0
offset_bottom = 885.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="you lose" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4wpvp")
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = ExtResource("5_0g15q")
text = "You lose"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_4wpvp")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_80fse")
theme_override_styles/hover = ExtResource("3_uuj0w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jqs3a")
theme_override_styles/focus = SubResource("StyleBoxFlat_y6thr")
text = "again"
script = ExtResource("4_4ex28")

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_4wpvp")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("5_0g15q")
theme_override_styles/hover = ExtResource("3_uuj0w")
theme_override_styles/pressed = ExtResource("3_uuj0w")
theme_override_styles/focus = SubResource("StyleBoxFlat_xqgtg")
text = "Quit"

[node name="hoveer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer"]
stream = ExtResource("8_jkc1d")
bus = &"sfx"

[node name="boooDIE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_iv24j")
volume_db = -10.667
bus = &"sfx"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="MarginContainer/VBoxContainer/Play" method="_on_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="MarginContainer/VBoxContainer/Play" method="_on_quit_pressed"]
